// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<EmptyTableBody /> should render EmptyTableBody with empty message based on filters state 1`] = `
.c0 {
  height: 384px;
}

<WithStyles(ForwardRef(TableRow))
  called={true}
  className="c0"
  error={false}
  isEmptyRepositoriesList={true}
>
  <Styled(WithStyles(ForwardRef(TableCell)))
    align="center"
    colSpan={3}
    key="empty-data"
  >
    <ContentRenderer
      contentComponent={
        <React.Fragment>
          <span
            aria-label="emodji"
            role="img"
          >
            🕵🏻
          </span>
           
          <div>
            Enter repository name or choose github user to start our journey.
          </div>
        </React.Fragment>
      }
      emptyComponent={
        <React.Fragment>
          <span
            aria-label="emodji"
            role="img"
          >
            🤷🏻‍♂️
          </span>
           
          <div>
            We couldn’t find any results. Let’s try removing some filters.
          </div>
        </React.Fragment>
      }
      errorComponent={
        <React.Fragment>
          <span
            aria-label="emodji"
            role="img"
          >
            🙅🏻‍♂️
          </span>
          <div>
            Something went wrong. Please
             
            <ForwardRef(WithStyles)
              href="https://github.com/shykhov"
              rel="noopener noreferrer"
              target="_blank"
            >
              contact the author
            </ForwardRef(WithStyles)>
             
            of the project.
          </div>
        </React.Fragment>
      }
      hasError={true}
      isEmpty={false}
      isLoading={false}
      loadingComponent={null}
    />
  </Styled(WithStyles(ForwardRef(TableCell)))>
</WithStyles(ForwardRef(TableRow))>
`;

exports[`<EmptyTableBody /> should render EmptyTableBody with empty message based on lack of filters 1`] = `
.c0 {
  height: 384px;
}

<WithStyles(ForwardRef(TableRow))
  className="c0"
  error={false}
  hasNoQueryParameters={true}
>
  <Styled(WithStyles(ForwardRef(TableCell)))
    align="center"
    colSpan={3}
    key="empty-data"
  >
    <ContentRenderer
      contentComponent={
        <React.Fragment>
          <span
            aria-label="emodji"
            role="img"
          >
            🕵🏻
          </span>
           
          <div>
            Enter repository name or choose github user to start our journey.
          </div>
        </React.Fragment>
      }
      emptyComponent={
        <React.Fragment>
          <span
            aria-label="emodji"
            role="img"
          >
            🤷🏻‍♂️
          </span>
           
          <div>
            We couldn’t find any results. Let’s try removing some filters.
          </div>
        </React.Fragment>
      }
      errorComponent={
        <React.Fragment>
          <span
            aria-label="emodji"
            role="img"
          >
            🙅🏻‍♂️
          </span>
          <div>
            Something went wrong. Please
             
            <ForwardRef(WithStyles)
              href="https://github.com/shykhov"
              rel="noopener noreferrer"
              target="_blank"
            >
              contact the author
            </ForwardRef(WithStyles)>
             
            of the project.
          </div>
        </React.Fragment>
      }
      hasError={true}
      isEmpty={false}
      isLoading={false}
      loadingComponent={null}
    />
  </Styled(WithStyles(ForwardRef(TableCell)))>
</WithStyles(ForwardRef(TableRow))>
`;

exports[`<EmptyTableBody /> should render EmptyTableBody with empty message based on lack of query papameters even if there are repositories 1`] = `
.c0 {
  height: 384px;
}

<WithStyles(ForwardRef(TableRow))
  className="c0"
  error={false}
  hasNoQueryParameters={true}
  isEmptyRepositoriesList={false}
>
  <Styled(WithStyles(ForwardRef(TableCell)))
    align="center"
    colSpan={3}
    key="empty-data"
  >
    <ContentRenderer
      contentComponent={
        <React.Fragment>
          <span
            aria-label="emodji"
            role="img"
          >
            🕵🏻
          </span>
           
          <div>
            Enter repository name or choose github user to start our journey.
          </div>
        </React.Fragment>
      }
      emptyComponent={
        <React.Fragment>
          <span
            aria-label="emodji"
            role="img"
          >
            🤷🏻‍♂️
          </span>
           
          <div>
            We couldn’t find any results. Let’s try removing some filters.
          </div>
        </React.Fragment>
      }
      errorComponent={
        <React.Fragment>
          <span
            aria-label="emodji"
            role="img"
          >
            🙅🏻‍♂️
          </span>
          <div>
            Something went wrong. Please
             
            <ForwardRef(WithStyles)
              href="https://github.com/shykhov"
              rel="noopener noreferrer"
              target="_blank"
            >
              contact the author
            </ForwardRef(WithStyles)>
             
            of the project.
          </div>
        </React.Fragment>
      }
      hasError={true}
      isEmpty={false}
      isLoading={false}
      loadingComponent={null}
    />
  </Styled(WithStyles(ForwardRef(TableCell)))>
</WithStyles(ForwardRef(TableRow))>
`;

exports[`<EmptyTableBody /> should render EmptyTableBody with empty message based on lack of query papameters even if there are repositories and called was already made 1`] = `
.c0 {
  height: 384px;
}

<WithStyles(ForwardRef(TableRow))
  called={true}
  className="c0"
  error={false}
  hasNoQueryParameters={true}
  isEmptyRepositoriesList={false}
>
  <Styled(WithStyles(ForwardRef(TableCell)))
    align="center"
    colSpan={3}
    key="empty-data"
  >
    <ContentRenderer
      contentComponent={
        <React.Fragment>
          <span
            aria-label="emodji"
            role="img"
          >
            🕵🏻
          </span>
           
          <div>
            Enter repository name or choose github user to start our journey.
          </div>
        </React.Fragment>
      }
      emptyComponent={
        <React.Fragment>
          <span
            aria-label="emodji"
            role="img"
          >
            🤷🏻‍♂️
          </span>
           
          <div>
            We couldn’t find any results. Let’s try removing some filters.
          </div>
        </React.Fragment>
      }
      errorComponent={
        <React.Fragment>
          <span
            aria-label="emodji"
            role="img"
          >
            🙅🏻‍♂️
          </span>
          <div>
            Something went wrong. Please
             
            <ForwardRef(WithStyles)
              href="https://github.com/shykhov"
              rel="noopener noreferrer"
              target="_blank"
            >
              contact the author
            </ForwardRef(WithStyles)>
             
            of the project.
          </div>
        </React.Fragment>
      }
      hasError={true}
      isEmpty={false}
      isLoading={false}
      loadingComponent={null}
    />
  </Styled(WithStyles(ForwardRef(TableCell)))>
</WithStyles(ForwardRef(TableRow))>
`;

exports[`<EmptyTableBody /> should render EmptyTableBody with error message 1`] = `
.c0 {
  height: 384px;
}

<WithStyles(ForwardRef(TableRow))
  className="c0"
>
  <Styled(WithStyles(ForwardRef(TableCell)))
    align="center"
    colSpan={3}
    key="empty-data"
  >
    <ContentRenderer
      contentComponent={
        <React.Fragment>
          <span
            aria-label="emodji"
            role="img"
          >
            🕵🏻
          </span>
           
          <div>
            Enter repository name or choose github user to start our journey.
          </div>
        </React.Fragment>
      }
      emptyComponent={
        <React.Fragment>
          <span
            aria-label="emodji"
            role="img"
          >
            🤷🏻‍♂️
          </span>
           
          <div>
            We couldn’t find any results. Let’s try removing some filters.
          </div>
        </React.Fragment>
      }
      errorComponent={
        <React.Fragment>
          <span
            aria-label="emodji"
            role="img"
          >
            🙅🏻‍♂️
          </span>
          <div>
            Something went wrong. Please
             
            <ForwardRef(WithStyles)
              href="https://github.com/shykhov"
              rel="noopener noreferrer"
              target="_blank"
            >
              contact the author
            </ForwardRef(WithStyles)>
             
            of the project.
          </div>
        </React.Fragment>
      }
      hasError={true}
      isEmpty={false}
      isLoading={false}
      loadingComponent={null}
    />
  </Styled(WithStyles(ForwardRef(TableCell)))>
</WithStyles(ForwardRef(TableRow))>
`;

exports[`<EmptyTableBody /> should render EmptyTableBody with with error message anyway 1`] = `
.c0 {
  height: 384px;
}

<WithStyles(ForwardRef(TableRow))
  called={true}
  className="c0"
  error={true}
  isEmptyRepositoriesList={true}
>
  <Styled(WithStyles(ForwardRef(TableCell)))
    align="center"
    colSpan={3}
    key="empty-data"
  >
    <ContentRenderer
      contentComponent={
        <React.Fragment>
          <span
            aria-label="emodji"
            role="img"
          >
            🕵🏻
          </span>
           
          <div>
            Enter repository name or choose github user to start our journey.
          </div>
        </React.Fragment>
      }
      emptyComponent={
        <React.Fragment>
          <span
            aria-label="emodji"
            role="img"
          >
            🤷🏻‍♂️
          </span>
           
          <div>
            We couldn’t find any results. Let’s try removing some filters.
          </div>
        </React.Fragment>
      }
      errorComponent={
        <React.Fragment>
          <span
            aria-label="emodji"
            role="img"
          >
            🙅🏻‍♂️
          </span>
          <div>
            Something went wrong. Please
             
            <ForwardRef(WithStyles)
              href="https://github.com/shykhov"
              rel="noopener noreferrer"
              target="_blank"
            >
              contact the author
            </ForwardRef(WithStyles)>
             
            of the project.
          </div>
        </React.Fragment>
      }
      hasError={true}
      isEmpty={false}
      isLoading={false}
      loadingComponent={null}
    />
  </Styled(WithStyles(ForwardRef(TableCell)))>
</WithStyles(ForwardRef(TableRow))>
`;
